Archive2/68/2a5d097ee342f4/output
main.cpp:3:13: error: 'State' does not name a type
             State<StateTypeEnum, EventTypeEnum>::_isIgnoredEvent = false;
             ^
main.cpp:4:13: error: 'State' does not name a type
             State<StateTypeEnum, EventTypeEnum>::_isInvalidEvent = false;
             ^
